--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,11 @@
     <string name="intro_label">Already Have an account? <font color="#F3C024"> Signin</font></string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="product_image">Product Image</string>
+    <string name="product_title">Product Title</string>
+    <string name="price">Price: $0.00</string>
+    <string name="product_description">Product Description</string>
+    <string name="in_stock">In Stock</string>
+    <string name="collection">Collection</string>
+    <string name="add_to_cart">Add to Cart</string>
 </resources>
